--- a/bibdatabase.bib
+++ b/bibdatabase.bib
@@ -1,3 +1,30 @@
+@book{laplace1840,
+  title={Essai philosophique sur les probabilit{\'e}s},
+  author={Laplace, P.S.},
+  url={http://books.google.com.br/books?id=SAsyUDOK0mIC},
+  year={1840},
+  publisher={Bachelier}
+}
+
+@book{laplace1814,
+  title={Th{\'e}orie analytique des probabilit{\'e}s},
+  author={Laplace, P.S.},
+  lccn={04007798},
+  url={http://books.google.com.br/books?id=6MRLAAAAMAAJ},
+  year={1814},
+  publisher={Ve. Courcier}
+}
+
+@book{moivre1718,
+  title={The Doctrine of Chances: Or, A Method of Calculating the Probability of Events in Play},
+  author={de Moivre, A.},
+  lccn={30014721},
+  url={http://books.google.com.br/books?id=3EPac6QpbuMC},
+  year={1718},
+  publisher={W. Pearson}
+}
+
+
 @book{Cox1961,
   title={Algebra of Probable Inference},
   author={Cox, R.T.},
@@ -287,7 +314,7 @@
 
 
 @article{Goyal2010,
-  title = {Origin of complex quantum amplitudes and Feynman's rules},
+  title = {Origin of complex quantum amplitudes and \protect{Feynman's} rules},
   author = {Goyal, Philip and Knuth, Kevin H. and Skilling, John},
   journal = {Phys. Rev. A},
   volume = {81},
