--- a/confs/packs.tex
+++ b/confs/packs.tex
@@ -1,7 +1,7 @@
 \usepackage[utf8x]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{ucs}
-\usepackage[brazilian]{babel}
+\usepackage[portuguese]{babel}
 \usepackage{nameref}
 \usepackage{makeidx}
 \usepackage{bm}
