--- a/bibdatabase.bib
+++ b/bibdatabase.bib
@@ -174,6 +174,20 @@
 	year = "1997"
 }
 
+@article{Shultz2010,
+  author = {Shultz, Susanne and Dunbar, Robin}, 
+  title = {Encephalization is not a universal macroevolutionary phenomenon in mammals but is associated with sociality},
+  volume = {107}, 
+  number = {50}, 
+  pages = {21582-21586}, 
+  year = {2010}, 
+  doi = {10.1073/pnas.1005246107}, 
+  abstract ={Evolutionary encephalization, or increasing brain size relative to body size, is assumed to be a general phenomenon in mammals. However, despite extensive evidence for variation in both absolute and relative brain size in extant species, there have been no explicit tests of patterns of brain size change over evolutionary time. Instead, allometric relationships between brain size and body size have been used as a proxy for evolutionary change, despite the validity of this approach being widely questioned. Here we relate brain size to appearance time for 511 fossil and extant mammalian species to test for temporal changes in relative brain size over time. We show that there is wide variation across groups in encephalization slopes across groups and that encephalization is not universal in mammals. We also find that temporal changes in brain size are not associated with allometric relationships between brain and body size. Furthermore, encephalization trends are associated with sociality in extant species. These findings test a major underlying assumption about the pattern and process of mammalian brain evolution and highlight the role sociality may play in driving the evolution of large brains.}, 
+  URL = {http://www.pnas.org/content/107/50/21582.abstract}, 
+  eprint = {http://www.pnas.org/content/107/50/21582.full.pdf+html}, 
+  journal = {Proceedings of the National Academy of Sciences} 
+}
+
 @book{deWaal1990,
   title={Peacemaking Among Primates},
   author={DE WAAL, F.B.M. and de Waal, F.B.M.},
@@ -399,4 +413,13 @@ eprint = {arXiv:1005.5718 [physics.soc-ph]}
   doi = {10.1103/PhysRevE.64.026118},
   url = {http://link.aps.org/doi/10.1103/PhysRevE.64.026118},
   publisher = {American Physical Society}
+}
+
+@book{Boehm2001,
+  title={Hierarchy in the Forest: The Evolution of Egalitarian Behavior},
+  author={Boehm, C.},
+  isbn={9780674006911},
+  url={http://books.google.com.br/books?id=ljxS8gUlgqgC},
+  year={2001},
+  publisher={Harvard University Press}
 }
