--- a/main.tex
+++ b/main.tex
@@ -10,7 +10,7 @@
 \input{./confs/tweaks}
 
 \input{./tex/pretext/details}
-% \makeindex
+\makeindex
 \begin{document}
   %\maketitle
   %pretextual area 
