fixed position of images

--- a/bibdatabase.bib
+++ b/bibdatabase.bib
@@ -306,7 +306,7 @@
   year={2009}
 }
 
-@Electronic{ACaticha2008,
+@article{ACaticha2008,
 	author = {Caticha, Ariel},
 	howpublished = {arxiv:0808.0012},
 	journal = {arXiv:0808.0012},
@@ -316,7 +316,7 @@
 	year = {2008}
 }
 
-@Electronic{ACaticha2009,
+@article{ACaticha2009,
 	title = {Quantifying Rational Belief},
 	author = {Ariel Caticha},
 	year = {2009},
