--- a/tex/autoridade.tex
+++ b/tex/autoridade.tex
@@ -2,26 +2,26 @@
 \label{ch:autoridade}
 \section{Introdução}
 
-\newthought{Os grandes primatas}, em particular os humanos, apresentam vidas sociais intensas. Atividades sociais, formação de coalizões, cooperação para realização de diversas tarefas, guerras, compartilhamento de alimentos, disputas por liderança \textit{et cetera}, situações ubíquas em agrupamentos humanos, não são entretanto limitadas a essa espécie mas são pervasivas em todas as espécies desse grupo\sourcesneeded. Estudos em chimpanzés e bonobos\cite{deWaal2007}\sourcesneeded, por exemplo, mostram que a variedade de suas experiências sociais são comparáveis apenas à da espécie humana.
-
-Entretanto a natureza dessa experiência social pode ser bem diferente entre humanos e outras espécies aparentadas. Enquanto a maioria dos grandes primatas vivem em sociedades hierárquicas\cite{boehm2001}, marcadas por uma grande concentração dos usos de recursos energéticos e reprodutivos por parte de poucos membros do grupo, os humanos se destacam pela variabilidade de suas experiências sociais nesse espectro\cite{Vehrencamp1983}. Certos grupos humanos\footnote{Dizer aqui que nos preocupamos com a evolução dos humanos e portanto vamos nos fixar em hunter-gatherers e sociedades simples.\clarificationneeded} apresentam organização fortemente centralizada e hierárquica, com concentração de uso de recursos e riqueza. Outros grupos apresentam sociedades basicamente equalitárias, com compartilhamento de recursos e alimentos, ausência de distinções de status, autoridades ou concentração de riqueza. \sourcesneeded Nossa intenção neste trabalho é investigar, através de um modelo matemático baseado em recentes observações nos campos da arqueologia, primatologia e neurociências, a origem dessa variabilidade.
-
-\section{Evidências empiricas}
-
-\subsection{``U-shaped evolution''} 
-
-\newthought{O registro arqueológico revela} uma dinâmica temporal na organização social dos humanos através da pré-história\cite[-3cm]{Knauft1991, Marcus2008}. Os humanos, descendendo de primatas com provável organização social hierárquica, passaram por um período de grupos equalitários, sem autoridade central, com baixa densidade populacional. No neolítico houve uma transição para grupos fortemente hierárquicos, conforme a densidade populacional aumenta após a revolução agrícola. Esse quadro, ilustrado pela figura \ref{fig:ushaped}, é denominado em \citep{Knauft1991} \emph{``a U-shaped evolution''}. 
-
-\newthought{Hoje, sociedades humanas} preenchem todo o espectro de organização social \cite[-3.5cm]{Vehrencamp1983} e evidências etnográficas também apontam para uma relação entre o tamanho dos grupos de humanos caçadores-coletores e suas formas de organização social\cite[-1cm]{Currie2010}. Grupos pequenos de humanos tendem a apresentar organização equalitária, sem concentração de poder. Grupos maiores tendem a apresentar organizações hierárquicas, concentração de poder e hereditariedade de poder. 
+\newthought{Os grandes primatas}, em particular os humanos, apresentam vidas sociais intensas. Atividades sociais, formação de coalizões, cooperação para realização de diversas tarefas, guerras, compartilhamento de alimentos, disputas por liderança \textit{et cetera}, situações ubíquas em agrupamentos humanos, não são entretanto limitadas a essa espécie mas são pervasivas em todas as espécies desse grupo\sourcesneeded. Estudos em chimpanzés e bonobos\cite[-2cm]{deWaal2007}\sourcesneeded, por exemplo, mostram que a variedade de suas experiências sociais são comparáveis apenas à da espécie humana.
 \begin{figure}
 	\centering
 	\includegraphics[width = 1.05\textwidth]{figuras/ushaped.png}
 	\caption{ Ilustração da história da organização social dos humanos e primatas pré-humanos.}
 	\label{fig:ushaped}
 \end{figure}
+Entretanto a natureza dessa experiência social pode ser bem diferente entre humanos e outras espécies aparentadas. Enquanto a maioria dos grandes primatas vivem em sociedades hierárquicas\cite[-3cm]{Boehm2001}, marcadas por uma grande concentração dos usos de recursos energéticos e reprodutivos por parte de poucos membros do grupo, os humanos se destacam pela variabilidade de suas experiências sociais nesse espectro\cite[-2cm]{Vehrencamp1983}. Certos grupos humanos\footnote{Dizer aqui que nos preocupamos com a evolução dos humanos e portanto vamos nos fixar em hunter-gatherers e sociedades simples.\clarificationneeded} apresentam organização fortemente centralizada e hierárquica, com concentração de uso de recursos e riqueza. Outros grupos apresentam sociedades basicamente equalitárias, com compartilhamento de recursos e alimentos, ausência de distinções de status, autoridades ou concentração de riqueza. \sourcesneeded Nossa intenção neste trabalho é investigar, através de um modelo matemático baseado em recentes observações nos campos da arqueologia, primatologia e neurociências, a origem dessa variabilidade.
+
+
+\section{Evidências empiricas}
+
+\subsection{``U-shaped evolution''} 
+\newthought{O registro arqueológico revela} uma dinâmica temporal na organização social dos humanos através da pré-história\cite[-8cm]{Knauft1991, Marcus2008}. Os humanos, descendendo de primatas com provável organização social hierárquica, passaram por um período de grupos equalitários, sem autoridade central, com baixa densidade populacional. No neolítico houve uma transição para grupos fortemente hierárquicos, conforme a densidade populacional aumenta após a revolução agrícola. Esse quadro, ilustrado pela figura \ref{fig:ushaped}, é denominado em \citep{Knauft1991} \emph{``a U-shaped evolution''}. 
+
+\newthought{Hoje, sociedades humanas} preenchem todo o espectro de organização social \cite[-8cm]{Vehrencamp1983} e evidências etnográficas também apontam para uma relação entre o tamanho dos grupos de humanos caçadores-coletores e suas formas de organização social\cite[-6cm]{Currie2010}. Grupos pequenos de humanos tendem a apresentar organização equalitária, sem concentração de poder. Grupos maiores tendem a apresentar organizações hierárquicas, concentração de poder e hereditariedade de poder. 
+
 
 \subsection{Evolução do cérebro primata e a Teoria Maquiavélica}
-\newthought{Estudos recentes\cite[-5cm]{Sawaguchi1990, Dunbar1992, Dunbar1993, 	Aiello1993, Joffe1997} relacionam} o tamanho relativo de regiões do cérebro de diversas espécies de primatas a medidas relacionadas com a capacidade social da espécie, como tamanho dos grupos em que vivem, o tamanho de coalizões, número médio de indivíduos que interagem diretamente, etc. O que é típicamente encontrado é ilustrado na figura \ref{fig:dunbarlaw}. Essa figura mostra um gráfico do tamanho médio do grupo em função da razão média entre o volume do neocórtex\footnote[][-2cm]{O neocórtex é uma região do cérebro envolvida no planejamento, raciocínio espacial, linguagem, entre outras funções cognitivas complexas.} e o volume total do cérebro para diversas espécies de primatas. O gráfico sugere uma relação do tipo lei de potência entre as duas grandezas, similar a encontradas em diversas outras comparações desse tipo. 
+\newthought{Estudos recentes\cite[-8cm]{Sawaguchi1990, Dunbar1992, Dunbar1993, Aiello1993, Joffe1997} relacionam} o tamanho relativo de regiões do cérebro de diversas espécies de primatas a medidas relacionadas com a capacidade social da espécie, como tamanho dos grupos em que vivem, o tamanho de coalizões, número médio de indivíduos que interagem diretamente, etc. O que é típicamente encontrado é ilustrado na figura \ref{fig:dunbarlaw}. Essa figura mostra um gráfico do tamanho médio do grupo em função da razão média entre o volume do neocórtex\footnote{O neocórtex é uma região do cérebro envolvida no planejamento, raciocínio espacial, linguagem, entre outras funções cognitivas complexas.} e o volume total do cérebro para diversas espécies de primatas. O gráfico sugere uma relação do tipo lei de potência entre as duas grandezas, similar a encontradas em diversas outras comparações desse tipo. 
 \begin{figure}
 	\centering
 	\includegraphics[width = \textwidth]{figuras/dunbar.png}
